# live-transcription

./: .gitignore  AGENTS.md  CLAUDE.md  HARNESS.md  README.md  justfile  live_transcribe.py  nllb_translator.py  pyproject.toml
.claude/: tracker.md
.claude/commands/: harness-bootstrap.md  harness-setup.md  task-implement.md  task-init.md
eval/: README.md  bench_korean_asr.py  pytest.ini  requirements.txt
eval/asr_eval/: __init__.py  backends.py  metrics.py  report.py  runner.py
eval/tests/: test_bench.py  test_load_audio.py  test_metrics.py  test_report.py  test_runner.py
tests/: conftest.py
tests/cli/: test_asr_backend_cli.py  test_base_display.py  test_chat_display.py  test_columns_display.py  test_main_continue.py  test_main_whisper.py  test_settings_store.py  test_transcript.py  test_wizard_continue.py  test_wizard_whisper.py
tests/core/: test_asr.py  test_chunk_for_translation.py  test_config.py  test_duplicate_filter.py  test_engine_adaptive_vad.py  test_engine_asr_backend.py  test_engine_filters.py  test_engine_pipeline.py  test_engine_qwen_shutdown.py  test_engine_retranslate.py  test_engine_shutdown.py  test_engine_whisper_translate.py  test_events.py  test_hallucination.py  test_preprocess_audio.py  test_smoke.py  test_whisper_transcribe.py
tests/core/translators/: conftest.py  test_contract.py  test_gpu_lock.py  test_qwen_translator.py
training/: README.md  requirements.txt
