[project]
name = "live-transcribe-workspace"
version = "0"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 10
filterwarnings = [
    "error",
    # Transitive import-time deprecations we don't own.
    "ignore::DeprecationWarning:resemblyzer.*",
    "ignore::UserWarning:webrtcvad",
]
